@@ -4,6 +4,7 @@ import com.atguigu.schedule.util.JDBCUtil;
 
 import java.lang.reflect.Field;
 import java.sql.*;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -36,16 +37,17 @@ public class BaseDAO {
         try {
             preparedStatement = connection.prepareStatement(sql);
             // 3.占位符赋值
-            if (params != null && params.length > 0) {
-                for (int i = 0; i < params.length; i++) {
-                    preparedStatement.setObject(i + 1, params[i]);
-                }
+
+            for (int i = 0; i < params.length; i++) {
+                preparedStatement.setObject(i + 1, params[i]);
             }
+
             // 4.执行sql语句
             row = preparedStatement.executeUpdate();
         } catch (SQLException e) {
-            throw new RuntimeException(e);
+            e.printStackTrace();
         } finally {
+            // 5.关闭资源
             try {
                 preparedStatement.close();
                 if (connection.getAutoCommit()) {
@@ -55,7 +57,6 @@ public class BaseDAO {
                 throw new RuntimeException(e);
             }
         }
-        // 5.关闭资源
         return row;
     }
 
@@ -67,55 +68,82 @@ public class BaseDAO {
         // 1.通过JDBCUtilV2获取数据库连接
         Connection connection = JDBCUtil.getConnection();
         // 2.预编译sql语句
-        List<T> arrayList = null;
+        List<T> arrayList = new ArrayList<>();
         ResultSet resultSet = null;
         PreparedStatement preparedStatement = null;
         try {
             preparedStatement = connection.prepareStatement(sql);
             // 3.占位符赋值
-            if (params != null && params.length > 0) {
-                for (int i = 0; i < params.length; i++) {
-                    preparedStatement.setObject(i + 1, params[i]);
-                }
+
+            for (int i = 0; i < params.length; i++) {
+                preparedStatement.setObject(i + 1, params[i]);
             }
+
             // 4.执行sql语句
             resultSet = preparedStatement.executeQuery();
             // 获取结果集中的元数据对象，包含列数量，列名称
             ResultSetMetaData metaData = resultSet.getMetaData();
             int columnCount = metaData.getColumnCount();
-            arrayList = new ArrayList<>();
             while (resultSet.next()) {
-                T t = clazz.newInstance();
+                Object obj = clazz.getDeclaredConstructor().newInstance();
                 for (int i = 0; i < columnCount; i++) {
-                    Object value = resultSet.getObject(i + 1);
-                    // 获取当前拿到列的名字 = 属性名
                     String columnLabel = metaData.getColumnLabel(i + 1);
+                    Object value = resultSet.getObject(columnLabel);
+                    // 处理datetime类型的字段和java.util.Data转换问题
+                    if (value.getClass().equals(LocalDateTime.class)) {
+                        value = Timestamp.valueOf((LocalDateTime) value);
+                    }
+
                     Field field = clazz.getDeclaredField(columnLabel);
                     field.setAccessible(true);
-                    field.set(t, value);
+                    field.set(obj, value);
                 }
-                arrayList.add(t);
+                arrayList.add((T) obj);
             }
 
         } catch (Exception e) {
-            throw new RuntimeException(e);
+            e.printStackTrace();
         } finally {
             // 5.关闭资源
+
+            if (null != resultSet) {
+                try {
+                    resultSet.close();
+                } catch (SQLException e) {
+                    throw new RuntimeException(e);
+                }
+            }
+            if (null != preparedStatement) {
+                try {
+                    preparedStatement.close();
+                } catch (SQLException e) {
+                    throw new RuntimeException(e);
+                }
+            }
+
             try {
-                resultSet.close();
-                preparedStatement.close();
                 if (connection.getAutoCommit()) {
                     JDBCUtil.release();
                 }
             } catch (SQLException e) {
                 throw new RuntimeException(e);
             }
+
         }
         return arrayList;
     }
 
+    public <T> T executeQueryBean(Class<T> clazz, String sql, Object... params) {
 
-    public <T> T executeQueryBean(Class<T> clazz, String sql, Object... params) throws Exception {
+        List<T> list = this.executeQuery(clazz, sql, params);
+        if (list != null && !list.isEmpty()) {
+            return list.get(0);
+        }
+        return null;
+    }
+
+
+    public <T> T executeQuerySingleRowClo(Class<T> clazz, String sql, Object... params) {
         T t = null;
         Connection connection = JDBCUtil.getConnection();
         PreparedStatement preparedStatement = null;
@@ -130,10 +158,14 @@ public class BaseDAO {
         } catch (Exception e) {
             e.printStackTrace();
         } finally {
-            if (null != resultSet) resultSet.close();
-            if (null != preparedStatement) preparedStatement.close();
-            if (connection.getAutoCommit()) {
-                JDBCUtil.release();
+            try {
+                if (null != resultSet) resultSet.close();
+                if (null != preparedStatement) preparedStatement.close();
+                if (connection.getAutoCommit()) {
+                    JDBCUtil.release();
+                }
+            } catch (SQLException e) {
+                throw new RuntimeException(e);
             }
         }
         return t;
